# vip-datamanagement/src/main/java/fr/insalyon/creatis/vip/datamanager/server/controller/StorageController.java
@@ -11,10 +11,12 @@ import org.springframework.core.io.FileSystemResource;
 import org.springframework.core.io.Resource;
 import org.springframework.http.ContentDisposition;
 import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.util.AntPathMatcher;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
@@ -78,5 +80,12 @@ public class StorageController {
                                 .build()
                                 .toString())
                 .body(resource);
+    }
+
+    @PutMapping(value = "/**")
+    public ResponseEntity<Void> uploadFile(HttpServletRequest request) throws VipException, java.io.IOException {
+        String path = resolvePath(request);
+        storageBusiness.uploadRawFileFromInputStream(path, request.getInputStream());
+        return ResponseEntity.status(HttpStatus.CREATED).build();
     }
 }
